--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 /chuong02/ex3/target/
 /chuong02/ex4/target/
 /chuong02/ex5/target/
+/chuong03/Ex01/target/
+/chuong03/Ex02/target/
+/chuong03/Ex03/target/
+/chuong03/Ex04/target/
