--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@
 /chuong03/Ex02/target/
 /chuong03/Ex03/target/
 /chuong03/Ex04/target/
+/chuong04/ex01/target/
+/chuong04/ex02/target/
+/chuong04/ex03/target/
+/chuong04/ex04/target/
